docs/attachment/kubernetes/ingress-controller/02-app-nginx.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: foo
  name: foo
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      k8s-app: foo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: foo
    spec:
      containers:
      - image: hub.8ops.top/third/nginx:1.21.1
        imagePullPolicy: IfNotPresent
        name: nginx
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
---
# Service
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: foo-service
  name: foo-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    k8s-app: foo
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: bar
  name: bar
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      k8s-app: bar
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: bar
    spec:
      containers:
      - image: hub.8ops.top/third/nginx:1.21.1
        imagePullPolicy: IfNotPresent
        name: nginx
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
---
# Service
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: bar-service
  name: bar-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    k8s-app: bar
---
