docs/attachment/kubernetes/ingress-controller/03-ing-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-default-01
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-default-02
spec:
  rules:
  - host: "default.8ops.top"
    http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-default-03
spec:
  rules:
  - host: "*.default.8ops.top"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
  - host: "default.8ops.top"
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
  - host: "default-v1.8ops.top"
    http:
      paths:
      - pathType: Exact
        path: "/v1"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
  - host: "default-v2.8ops.top"
    http:
      paths:
      - pathType: Exact
        path: "/v2"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
  - host: "default-v3.8ops.top"
    http:
      paths:
      - pathType: Exact
        path: "/v3"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
---
