docs/attachment/kubernetes/ingress-controller/05-ing-internal.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-internal-01
  namespace: default
spec:
  ingressClassName: internal
  rules:
  - host: internal.8ops.top
    http:
      paths:
      - backend:
          service:
            name: foo-service
            port:
              number: 8080
        path: /
        pathType: Exact
      - backend:
          service:
            name: bar-service
            port:
              number: 8080
        path: /
        pathType: Prefix
---
